# rewindex

./: .gitignore  .rewindex.json  .rewindexignore  .scope.json  BINARY_FILES_IMPLEMENTATION.md  BUILD.md  CLAUDE.md  FALLING_FILES_DESIGN.md  FRD.md  INSTALL.md  INSTALLATION_ENHANCEMENTS.md  LAUNCHER_INTEGRATION.md  LIST_VIEW_IMPLEMENTATION.md  MANIFEST.in  MUURI_INTEGRATION_PLAN.md  README.md  REWINDex.desktop  SMART_PATH_UX.md  TIMELINE_FIX.md  TIMELINE_IMPROVEMENTS.md  TUI_BUGFIX.md  TUI_CHANGELOG.md  TUI_IMPLEMENTATION.md  TUI_MARKUP_FIX.md  TUI_MOUSE_UPDATE.md  TUI_QUICKSTART.md  TUI_SEARCH_MODES.md  WEB_UI_RESULTS_ONLY_MODE.md  WEB_UI_SECONDARY_FILTER.md  build-binary.sh  create-release.sh  docker-compose.yml  install.sh  omarchy-bootstrap.sh  pyproject.toml  rofi-ui.sh  test-rofi.sh  test-walker.sh  uninstall.sh  walker-ui.sh
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
.scope/: scope.db
rewindex/: __main__.py  api_server.py  cli.py  config.py  db.py  es.py  es_schema.py  extractor.py  indexing.py  language.py  search.py  theme_watcher.py
rewindex/tui/: __init__.py  app.py  sparkline.py
rewindex/web/: CASCADING_FILTER_BUTTON_FIX.md  FILTER_PANEL_POSITIONING_FIX.md  LIST_VIEW_API_ENDPOINT_FIXES.md  LIST_VIEW_CANVAS_REQUERY.md  LIST_VIEW_EVENT_HANDLER_FIXES.md  LIST_VIEW_FEATURE.md  LIST_VIEW_FILTER_POSITIONING_CORRECT.md  LIST_VIEW_FIXES.md  LIST_VIEW_INTERACTION_FINAL_FIXES.md  LIST_VIEW_INTERACTION_FIXES.md  LIST_VIEW_LINE_HIGHLIGHTING.md  LIST_VIEW_METADATA_FIX.md  LIST_VIEW_PATH_WRAPPING.md  LIST_VIEW_PREVIEW_ONLY_MODE.md  app.js  (+6 more)
(+1 files in other folders)
