[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewindex"
version = "0.1.0"
description = "Rewindex: local Elasticsearch-backed code search and UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Rewindex"}]
dependencies = []

[project.optional-dependencies]
tui = [
  "textual>=0.47.0",
  "pygments>=2.17.0",
]

[project.scripts]
rewindex = "rewindex.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rewindex"]

[tool.setuptools.package-data]
rewindex = [
  "web/*",
  "web/**/*",
]
